package ExamReviewer.ExamMetada.DataBaseStructures;

import java.io.Serializable;

public class Condition implements Serializable {
    public int idCondicion;
    public String Nombre;
    public double Peso;
    public int Cantidad;
}
