package ExamReviewer.ExamMetada.DataBaseStructures;

import java.io.Serializable;
import java.util.ArrayList;

public class ExeAnswer implements Serializable {
    /*public ArrayList<String> Respuesta;
    public double peso;*/
    public String variable;
    public String valorFinal;
    public double peso;
}
