package ExamReviewer.ExamMetada.DataBaseStructures;

import java.io.Serializable;
import java.util.ArrayList;

public class Solution implements Serializable {
    public ArrayList<String> Respuesta;
    public int Peso_clon;
}
