package ExamReviewer.ExamMetada.DataBaseStructures;

public class Student {
    public int idEstudiante;
}
